feat: eureka and non trivial web services for order presc and pharm inv services